# SelfDrivingCar

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  api_lane_detection.cpp  api_lane_detection.h  center_point_data.txt  cmake_install.cmake  contributors.txt  main.cpp  maintest
video_data_train/: gray1.avi
